force-app/main/default/objects/Account/fields/A2__c.field-meta.xml
<CustomField>
    <fullName>A2__c</fullName>
    <label>A2</label>
    <type>Url</type>
</CustomField>