force-app/main/default/objects/Account/fields/A2_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>A2_Issue_Date__c</fullName>
    <label>A2 Issued Date</label>
    <type>Date</type>
</CustomField>