force-app/main/default/objects/Account/fields/A2_License_No__c.field-meta.xml
<CustomField>
    <fullName>A2_License_No__c</fullName>
    <label>A2 License No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>