force-app/main/default/objects/Account/fields/A2_License_Picture__c.field-meta.xml
<CustomField>
    <fullName>A2_License_Picture__c</fullName>
    <label>A2 License Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>