force-app/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicated Lead</label>
    <type>Checkbox</type>
</CustomField>