force-app/main/default/objects/Account/fields/Account_Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Account_Is_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Is Primary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account Is Primary)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>