force-app/main/default/objects/Account/fields/AccountNo__c.field-meta.xml
<CustomField>
    <fullName>AccountNo__c</fullName>
    <label>AccountNo</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>