force-app/main/default/objects/Account/fields/Address_Eng__c.field-meta.xml
<CustomField>
    <fullName>Address_Eng__c</fullName>
    <label>Address (Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>