force-app/main/default/objects/Account/fields/Address_logo__c.field-meta.xml
<CustomField>
    <fullName>Address_logo__c</fullName>
    <label>Address logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>