force-app/main/default/objects/Account/fields/Applied_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Applied_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied Promotion</label>
    <type>Checkbox</type>
</CustomField>