force-app/main/default/objects/Account/fields/Bank_Account_Name_Eng__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name_Eng__c</fullName>
    <label>Bank Account Name Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>