force-app/main/default/objects/Account/fields/Bank_Number2__c.field-meta.xml
<CustomField>
    <fullName>Bank_Number2__c</fullName>
    <label>Bank Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>