force-app/main/default/objects/Account/fields/Bike_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bike_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bike Account Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>