force-app/main/default/objects/Account/fields/Consumerid__c.field-meta.xml
<CustomField>
    <fullName>Consumerid__c</fullName>
    <label>Consumerid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>