force-app/main/default/objects/Account/fields/Contract_Company_Name_Eng__c.field-meta.xml
<CustomField>
    <fullName>Contract_Company_Name_Eng__c</fullName>
    <label>Contract Company Name Eng</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>