force-app/main/default/objects/Account/fields/Count_Opportunity_Bike_Open__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity_Bike_Open__c</fullName>
    <label>Count Opportunity Bike Open</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Bike</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>