force-app/main/default/objects/Account/fields/Current_Round_Robin_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Current_Round_Robin_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Round Robin Assignment</label>
    <referenceTo>Round_Robin_Assignment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>