force-app/main/default/objects/Account/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>