force-app/main/default/objects/Account/fields/dealercode__c.field-meta.xml
<CustomField>
    <fullName>dealercode__c</fullName>
    <label>dealercode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>