force-app/main/default/objects/Account/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <formula>DO_DL_Create_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO DL</label>
    <type>Text</type>
</CustomField>