force-app/main/default/objects/Account/fields/DO_DL_Create_Account__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_Create_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO/DL Create</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (DO/DL tạo)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>