force-app/main/default/objects/Account/fields/DO_Phone_Personal__c.field-meta.xml
<CustomField>
    <fullName>DO_Phone_Personal__c</fullName>
    <formula>IF(IsPersonAccount ,  DO_DL_Code__c  +  PersonContact.Phone , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO Phone Personal</label>
    <type>Text</type>
</CustomField>