force-app/main/default/objects/Account/fields/Einvoice_Location__c.field-meta.xml
<CustomField>
    <fullName>Einvoice_Location__c</fullName>
    <label>Einvoice Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hồ Chí Minh</fullName>
            </value>
            <value>
                <fullName>Hà Nội</fullName>
            </value>
            <value>
                <fullName>Đà Nẵng</fullName>
            </value>
            <value>
                <fullName>Nha Trang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>