force-app/main/default/objects/Account/fields/Head_Office_Eng__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Eng__c</fullName>
    <label>Head Office (Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>