force-app/main/default/objects/Account/fields/ID_Issue_By__c.field-meta.xml
<CustomField>
    <fullName>ID_Issue_By__c</fullName>
    <label>ID Issue By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>