force-app/main/default/objects/Account/fields/ID_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Issue_Date__c</fullName>
    <label>ID Issue Date</label>
    <type>Date</type>
</CustomField>