force-app/main/default/objects/Account/fields/ID_Issued_By_Eng__c.field-meta.xml
<CustomField>
    <fullName>ID_Issued_By_Eng__c</fullName>
    <formula>IF( ISBLANK(TEXT(ID_Issued_By__c)), &apos;&apos;,IF( TEXT(ID_Issued_By__c) == &apos;Công An&apos;, &apos;Police of&apos;, IF(TEXT(ID_Issued_By__c) == &apos;Cục trưởng Cục Cảnh sát ĐKQL cư trú và DLQG về dân cư&apos;, &apos;Director General of the Police Department of Registration and Management of Residence and National Population Data&apos;,&apos;Director General of the Police Department for Administrative Management of Social Order&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Issued By (Eng)</label>
    <type>Text</type>
</CustomField>