force-app/main/default/objects/Account/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <label>ID.No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>