force-app/main/default/objects/Account/fields/Is_Duplicated_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicated_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicated Account</label>
    <type>Checkbox</type>
</CustomField>