force-app/main/default/objects/Account/fields/Is_Membership__c.field-meta.xml
<CustomField>
    <fullName>Is_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Membership</label>
    <type>Checkbox</type>
</CustomField>