force-app/main/default/objects/Account/fields/Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Action__c</fullName>
    <label>Last Action</label>
    <type>Date</type>
</CustomField>