force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <formula>if(
ISNULL(Last_Activity_Date_Custom__c),
Today() - LastActivityDate,
If(
Last_Activity_Date_Custom__c &gt; LastActivityDate,
TODAY() - Last_Activity_Date_Custom__c,
TODAY() - LastActivityDate
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>