force-app/main/default/objects/Account/fields/Last_Activity_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_Custom__c</fullName>
    <label>Last Activity Date Custom</label>
    <type>Date</type>
</CustomField>