force-app/main/default/objects/Account/fields/Last_Activity_For_KPI__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_For_KPI__c</fullName>
    <formula>if(LastActivityDate != null , IF( Last_Activity_Date_Custom__c &gt;  LastActivityDate , Last_Activity_Date_Custom__c  , LastActivityDate ),Last_Activity_Date_Custom__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity For KPI</label>
    <type>Date</type>
</CustomField>