force-app/main/default/objects/Account/fields/Latest_Opportunity_Lost__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity_Lost__c</fullName>
    <label>Latest Opportunity Lost</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Bike</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>