force-app/main/default/objects/Account/fields/Log_CMS__c.field-meta.xml
<CustomField>
    <fullName>Log_CMS__c</fullName>
    <label>Log CMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>