force-app/main/default/objects/Account/fields/Next_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up__c</fullName>
    <label>Next Follow Up</label>
    <type>TextArea</type>
</CustomField>