force-app/main/default/objects/Account/fields/NonResident__c.field-meta.xml
<CustomField>
    <fullName>NonResident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-resident</label>
    <type>Checkbox</type>
</CustomField>