force-app/main/default/objects/Account/fields/Opportunity_Close_Lost__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Lost__c</fullName>
    <label>Opportunity Close Lost</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Bike</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>