force-app/main/default/objects/Account/fields/Opportunity_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Fixed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Fixed</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>