force-app/main/default/objects/Account/fields/Owning_DO_DLR__c.field-meta.xml
<CustomField>
    <fullName>Owning_DO_DLR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning DO/DLR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Owning DO/DLR)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>