force-app/main/default/objects/Account/fields/PCA_Manager__c.field-meta.xml
<CustomField>
    <fullName>PCA_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCA Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (PCA Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>