force-app/main/default/objects/Account/fields/Permanent_Residence__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Residence__c</fullName>
    <label>Permanent Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>