force-app/main/default/objects/Account/fields/PersonMailingAddress_Full__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingAddress_Full__c</fullName>
    <formula>PersonMailingStreet+&apos; , &apos;+PersonMailingCity+&apos; , &apos;+PersonMailingState+&apos; , &apos;+ PersonMailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Mailing Address Full</label>
    <type>Text</type>
</CustomField>