force-app/main/default/objects/Account/fields/QR__c.field-meta.xml
<CustomField>
    <fullName>QR__c</fullName>
    <label>QR Code</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>