force-app/main/default/objects/Account/fields/Represented_By__c.field-meta.xml
<CustomField>
    <fullName>Represented_By__c</fullName>
    <label>Represented By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>