force-app/main/default/objects/Account/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>IF(LEFT( Owner.Alias ,6) = &apos;salemc&apos;  || LEFT( Owner.Alias ,6) = &apos;ssenio&apos; , &apos;Sale&apos;, &apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>