force-app/main/default/objects/Account/fields/Type_DMS__c.field-meta.xml
<CustomField>
    <fullName>Type_DMS__c</fullName>
    <label>Type DMS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>