force-app/main/default/objects/Account/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>