force-app/main/default/objects/Account/fields/Warehouse_Location_Service__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location Service</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Accounts (Warehouse Location Service)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>