force-app/main/default/objects/Account/fields/Workshop_ID__c.field-meta.xml
<CustomField>
    <fullName>Workshop_ID__c</fullName>
    <label>Workshop ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>