force-app/main/default/objects/Account/fields/Zalo_Viber__c.field-meta.xml
<CustomField>
    <fullName>Zalo_Viber__c</fullName>
    <label>Zalo &amp; Viber</label>
    <type>Phone</type>
</CustomField>