force-app/main/default/objects/Account/recordTypes/DODLR.recordType-meta.xml
<RecordType>
    <fullName>DODLR</fullName>
    <active>true</active>
    <label>DO/DLR</label>
</RecordType>