force-app/main/default/objects/Account/listViews/All_Customer_Accounts_HN.listView-meta.xml
<ListView>
    <fullName>All_Customer_Accounts_HN</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>DOB__pc</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>AccountNo__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Customer</value>
    </filters>
    <filters>
        <field>Is_Primary__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DO_DL_Create_Account__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR HA NOI</value>
    </filters>
    <label>All Customer Accounts HN</label>
    <sharedTo>
        <group>Group_User_DO_HN</group>
    </sharedTo>
</ListView>