force-app/main/default/objects/Account/listViews/My_Accounts_HN.listView-meta.xml
<ListView>
    <fullName>My_Accounts_HN</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>DO_DL_Create_Account__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR HA NOI</value>
    </filters>
    <label>My Accounts HN</label>
    <sharedTo>
        <group>Group_User_DO_HN</group>
    </sharedTo>
</ListView>