force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>DO_DL_Create_Account__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR SAI GON</value>
    </filters>
    <label>My Accounts SG</label>
    <sharedTo>
        <group>Group_User_In_DO_HCM</group>
    </sharedTo>
</ListView>